ROS2Sample/log/build_2022-07-17_09-52-59/python_publisher/stderr.log
  File "/home/kcg/copy/ROS2Sample/install/python_publisher/lib/python3.8/site-packages/python_publisher/adaptive_cruise_control.py", line 13
    from
        ^
SyntaxError: invalid syntax

